# Avenrixa

./: .dockerignore  .gitignore  .pr_agent.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  REFACTORING.md  REFACTORING_CHECKLIST.md  REFACTORING_EXAMPLE.md  check-before-refactor.sh  compose.mariadb.ops.yml.example  compose.mariadb.yml  compose.mysql.ops.yml.example  compose.mysql.yml  compose.sqlite.mailpit.yml  compose.sqlite.yml  compose.yml  create-structure.sh
backend/: Cargo.toml
backend/migrations/mysql/: 0001_initial_schema.sql  0002_drop_unique_filename_index.sql
backend/migrations/postgresql/: 0001_initial_schema.sql
backend/migrations/sqlite/: 0001_initial_schema.sql  0002_drop_unique_filename_index.sql
backend/src/: audit.rs  background_tasks.rs  backup_manifest.rs  cache.rs  config.rs  db.rs  email.rs  error.rs  file_queue.rs  image_processor.rs  main.rs  middleware.rs  models.rs  observability.rs  router.rs  routes.rs  runtime_settings.rs  server.rs  sqlite_restore.rs  storage_backend.rs  tasks.rs  utils.rs
backend/src/bootstrap/: bootstrap_state.rs  cache.rs  database.rs  logging.rs  mod.rs  redis.rs  services.rs  state.rs  store.rs
backend/src/cache/: connection.rs  hash.rs  image.rs  mod.rs  store.rs  tests.rs
backend/src/config/: defaults.rs  env.rs  mod.rs  types.rs  validation.rs
backend/src/db/: admin.rs  migrations.rs  mod.rs  pool.rs  schema.rs  state.rs
backend/src/domain/: mod.rs
backend/src/domain/admin/: domain_service.rs
backend/src/domain/auth/: claims.rs  domain_service.rs  mock_repository.rs  mod.rs  repository.rs  service.rs  state_repository.rs
backend/src/domain/image/: domain_service.rs  mock_repository.rs  mod.rs  repository.rs
backend/src/error/: app_error.rs  http.rs  mod.rs
backend/src/handlers/: admin.rs  auth.rs  bootstrap.rs  images.rs  images_cursor.rs  install.rs  mod.rs  s3_test.rs  settings_config.rs  storage_browser.rs
backend/src/handlers/admin/: audit.rs  common.rs  health.rs  maintenance.rs  mod.rs  settings.rs  users.rs
backend/src/handlers/auth/: common.rs  login.rs  mod.rs  password.rs  refresh.rs  register.rs  reset.rs  session.rs
backend/src/handlers/images/: common.rs  delete_restore.rs  mod.rs  query.rs  update.rs  upload.rs
backend/src/handlers/install/: transactions.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/database/: mod.rs
backend/src/infrastructure/storage/: file_queue.rs  image_processor.rs  mod.rs
backend/src/models/: admin.rs  auth.rs  bootstrap.rs  common.rs  image.rs  media_blob.rs  pagination.rs
backend/src/router/: api.rs  bootstrap.rs  frontend.rs  mod.rs
backend/src/routes/: api.rs  media.rs  mod.rs
backend/src/runtime_settings/: mod.rs  model.rs  service.rs  validation.rs
backend/src/runtime_settings/service/: apply.rs
backend/src/sqlite_restore/: mysql.rs  sqlite_ops.rs  state.rs
backend/src/storage_backend/: cleanup.rs  manager.rs  mod.rs  path.rs  s3.rs
backend/tests/: fail_closed.rs
docs/: LAYERED_ARCHITECTURE.md  (+10 more)
frontend/: .prettierrc  Cargo.toml  README.md  Trunk.toml  dx.toml  eslint.config.js  frontend-914aaf1d672c76ff.js  frontend-914aaf1d672c76ff_bg.wasm  index.dev.html  index.html  package-lock.json  package.json  package.json.new  styles-af761e8cf0efd1d0.css  styles.css  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  App.vue  action_feedback.rs  app.css  app.rs  app_context.rs  auth_session.rs  config.rs  config.spec.ts  config.ts  lib.rs  main.rs  main.ts  routes.rs  styles.css  svelte.d.ts  vite-env.d.ts
frontend/src/__tests__/: basic.test.ts  validation.test.ts
frontend/src/api/: client.spec.ts  client.ts  errors.ts  types.spec.ts  types.ts
frontend/src/components/: AppNavbar.vue  Auth.svelte  Avatar.svelte  Badge.svelte  Button.svelte  CategoryModal.vue  ConfirmDialog.vue  Dialog.svelte  DropdownMenu.svelte  EmptyState.svelte  Home.svelte  ImageCard.svelte  ImageCard.vue  ImageCopyPanel.vue  ImageEditor.svelte  ImageEditor.vue  ImageGrid.vue  ImageList.vue  ImagePreview.svelte  ImagePreview.vue  Input.svelte  LazyImage.svelte  LazyImage.vue  LoadingSpinner.vue  LocaleSwitcher.svelte  LocaleSwitcher.vue  Modal.svelte  Modal.vue  Profile.svelte  PromptDialog.vue  Router.svelte  Select.svelte  Settings.svelte  ShellPanel.vue  SiteFaviconField.vue  Skeleton.svelte  Skeleton.vue  StorageDirectoryPicker.vue  Toast.svelte  Toast.vue  (+20 more)
frontend/src/composables/: useDialog.ts  useFileUpload.ts  useKeyboard.ts  useModalScroll.ts  useNetwork.ts  useToast.ts
frontend/src/constants/: index.ts
frontend/src/locales/: index.ts
frontend/src/pages/: api_page.rs  bootstrap_database_page.rs  deleted_images_page.rs  image_list_page.rs  install_wizard_page.rs  login_page.rs  mod.rs  settings_page.rs  upload_page.rs
frontend/src/router/: index.ts
frontend/src/routes/: layout.rs  mod.rs
frontend/src/services/: admin_service.rs  api_client.rs  auth_service.rs  image_service.rs  install_service.rs  mod.rs  settings_service.rs
frontend/src/shell/: resolve.spec.ts  resolve.ts
frontend/src/store/: api.ts  auth.rs  auth.ts  auth.ts.backup  images.rs  mod.rs  navigation.rs  toast_store.rs  ui.rs
frontend/src/stores/: api.ts  auth.ts  dialog.ts  images.spec.ts  images.ts  router.ts  routes.ts  shell.spec.ts  shell.ts  theme.ts  toast.spec.ts  toast.ts
frontend/src/styles/: animations.css  tailwind.css  variables.css
frontend/src/types/: api.rs  errors.rs  index.ts  mod.rs  models.rs
frontend/src/utils/: api.ts  clipboard.ts  cookie.rs  debounce.ts  errorHandler.ts  focusTrap.ts  format.ts  mod.rs  performance.ts  sanitize.ts  upload.ts  validation.ts
frontend/src/views/: AdminPanel.vue  ApiView.vue  Auth.vue  BootstrapDatabaseView.vue  HistoryView.vue  Home.vue  InstallWizardView.vue  LoginView.vue  Profile.vue  Settings.vue  SettingsView.vue  UploadView.vue
frontend/tests/: api_test.rs  component_test.rs  config_test.rs  image_list_test.rs  login_test.rs  route_test.rs  store_test.rs  style_test.rs  types_test.rs
(+529 files in other folders)
