[package]
name = "vansour-image"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "limit", "set-header", "request-id"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
jsonwebtoken = "9"
bcrypt = "0.18"
base64 = "0.22"
tower_governor = "0.8"
axum-extra = { version = "0.12", features = ["typed-header", "cookie", "multipart"] }
reqwest = { version = "0.13", features = ["json"] }
rand = "0.10"
image = "0.25"
imageproc = "0.26"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
once_cell = "1.18"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
futures = "0.3"
tempfile = "3.13"
regex = "1.10"
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"
