[workspace]
members = [
    "backend",
    "frontend",
    "shared-types",
]
resolver = "2"

[workspace.package]
version = "0.1.2-rc.2"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
shared-types = { path = "shared-types" }
