[package]
name = "vansour-image-backend"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
tokio = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
mime_guess = "2"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "limit", "set-header", "request-id"] }
sha2 = "0.10"
hex = "0.4"
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
bcrypt = "0.19"
base64 = "0.22"
tower_governor = "0.8"
axum-extra = { version = "0.12", features = ["typed-header", "cookie", "multipart"] }
reqwest = { version = "0.13", features = ["json"] }
rand = "0.10"
unicode-width = "0.2"
image = "0.25"
imageproc = "0.26"
thiserror = { workspace = true }
validator = { version = "0.20", features = ["derive"] }
once_cell = "1.21"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
futures = "0.3"
tempfile = "3.26"
regex = "1.12"
num_cpus = "1.17"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
