[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vansour-image"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie", "multipart", "typed-header"] }
base64 = "0.22"
bcrypt = "0.19"
blake3 = "1.8"
chrono = { workspace = true }
futures = "0.3"
glob = "0.3"
hex = "0.4"
image = "0.25"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
lettre = { version = "0.11", features = ["builder", "smtp-transport", "tokio1-native-tls"] }
mime_guess = "2"
num_cpus = "1.17"
once_cell = "1.21"
rand = "0.10"
redis = { version = "1.0", features = ["connection-manager", "tokio-comp"] }
regex = "1.12"
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["chrono", "json", "migrate", "mysql", "postgres", "runtime-tokio-rustls", "sqlite", "uuid"] }
tempfile = "3.27"
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["fs", "limit", "request-id", "set-header", "trace"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
uuid = { workspace = true }
shared-types = { workspace = true }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
