[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[lib]
name = "frontend_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "multipart", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
urlencoding = "2.1"
base64 = "0.22"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "Clipboard",
    "ClipboardItem",
    "Document",
    "Element",
    "History",
    "Location",
    "Navigator",
    "Storage",
    "Window",
] }
js-sys = "0.3"
gloo-timers = "0.3"
