[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[lib]
name = "frontend_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
dioxus = { version = "0.7.3", features = ["web"] }
futures = "0.3"
gloo-timers = "0.3"
js-sys = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json", "multipart", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
urlencoding = "2.1"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "Clipboard",
    "ClipboardEvent",
    "ClipboardItem",
    "DataTransfer",
    "Document",
    "Element",
    "File",
    "FileList",
    "History",
    "HtmlElement",
    "Location",
    "Navigator",
    "Storage",
    "Window",
] }
shared-types = { workspace = true }
